<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUsuarioActivity"
    android:background="@mipmap/fondo"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="430dp"
        android:layout_height="wrap_content"

        android:background="@drawable/esquinas_redondeadas"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/logo_small_icon_only"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:textSize="14pt"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            />
          <!--Nombre-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_profile_user"

                />

            <EditText
                android:id="@+id/nombre"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text"
               />
        </LinearLayout>
        <!-- numero de telefono-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_phone_call"

                />

            <EditText
                android:id="@+id/telefono"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Telefono"
                android:inputType="phone"
                />
        </LinearLayout>
        <!--  Correo-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_email"

                />

            <EditText
                android:id="@+id/correo"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>
        <!-- Peso y altura -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <!--  peso-->
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circulo_con_border"

                >
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_peso"

                    />

                <EditText
                    android:id="@+id/peso"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso"
                    android:inputType="number"
                    />
            </LinearLayout>
            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
            <!--  Alatura-->
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circulo_con_border"

                >
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_altura"

                    />

                <EditText
                    android:id="@+id/altura"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altura"
                    android:inputType="number"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--genero-->
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hombre"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_hombre"

                />

            <RadioButton
                android:id="@+id/hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        </LinearLayout>
        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mujer"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_mujer"

                    />
                <RadioButton
                    android:id="@+id/mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></RadioButton>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <!--  Contraseña-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_key"

                />

            <EditText
                android:id="@+id/contrasena"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="text"
                />
        </LinearLayout>
        <!-- verificar Contraseña-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_key"

                />

            <EditText
                android:id="@+id/verificarcontraseña"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verificacontraseña"
                android:inputType="text"
                />
        </LinearLayout>
        <Button
            android:text="@string/crear_cuenta"
            android:id="@+id/verificar"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_degradado_blanco"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>