<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevaContrasenaActivity"
    android:background="@mipmap/fondo">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="430dp"
        android:layout_height="wrap_content"

        android:background="@drawable/esquinas_redondeadas"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_bloquear"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidadecontraseña"
            android:textSize="14pt"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_key"

                />

            <EditText
                android:id="@+id/contrasena"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="text"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_con_border"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_key"

                />

            <EditText
                android:id="@+id/verificarcontraseña"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verificacontraseña"
                android:inputType="text"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <Button
            android:text="Verificar"
            android:id="@+id/verificar"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_degradado_blanco"
            android:layout_marginBottom="30dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>