<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/fondo"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:background="@drawable/circulo"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@mipmap/logo_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="430dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/esquinas_redondeadas"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circulo_con_border"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_profile_user"

                    />

                <EditText
                    android:id="@+id/correlogin"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circulo_con_border"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                >
                <ImageView
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_key"

                    />

                <EditText
                    android:id="@+id/contrasena"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Button
                android:text="Iniciar Sesión"
                android:elevation="10dp"
                android:id="@+id/iniciarsesion"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_degradado_blanco"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <!--registar-->
                <LinearLayout
                    android:id="@+id/layoutRegistar"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/registar"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Registar"
                        android:clickable="true"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:src="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/layoutRegistar">

                    <TextView android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ó" />
                </LinearLayout>
                <!--Olvidecontraseña-->
                <LinearLayout
                    android:id="@+id/layoutOlvideContraseña"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/layoutO"
                    android:gravity="center"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/olvidemicontrasena"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Olvide mi Contraseña"
                    android:clickable="true"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp" />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:src="@color/black" />

                </LinearLayout>
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/messajeRedes"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">

                <Button

                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/boton_degradado_azul"
                    android:drawableLeft="@drawable/ic_facebook" android:fadingEdge="vertical"
                    android:text="@string/facebook"
                    android:textColor="@color/white"/>
                <Space
                    android:layout_width="25dp"
                    android:layout_height="wrap_content" />
                <Button

                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/boton_degradado_blanco"
                    android:drawableLeft="@drawable/ic_google"

                    android:text="@string/Google" />

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>